<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".view.matches.NextMatchFragment">

    <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/next_match_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

        </RelativeLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>